# rust-url-shortener

./: Cargo.toml  README.md  urls.db
src/: LICENSE  db.rs  main.rs  routes.rs
static/: index.html  script.js  styles.css
