[package]
name = "urlshortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"  # Web framework
tokio = { version = "1", features = ["full"] }  # Async runtime
tower-http = { version = "0.4", features = ["trace"] }  # HTTP utilities (optional)
serde = { version = "1", features = ["derive"] }  # For JSON handling
serde_json = "1"  # JSON serialization/deserialization
